Wrote all the Swagger documentation for /group endpoints, pending implementation
