# api/index-https.js
@@ -14,6 +14,7 @@ require('./libraries/passport');
 const authRoute = require("./routes/auth");
 const testRoute = require("./routes/test");
 const userRoute = require("./routes/user");
+const groupRoute = require("./routes/group");
 
 const app = express();
 app.use(morgan("combined"));
@@ -25,6 +26,7 @@ router.use("/auth", authRoute);
 router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use("/test", testRoute);
 router.use("/user", userRoute);
+router.use("/group", groupRoute);
 
 app.use("/api/v1", router);
 
